--- a/01-firstSteps/src/app/app.component.html
+++ b/01-firstSteps/src/app/app.component.html
@@ -1,7 +1,8 @@
 <h1>{{title}}</h1>
+<h3>Base Number is: {{base}}</h3>
 
-<button (click)="changeValue(+1)"> +1 </button>
+<button (click)="changeValue(base)"> + {{base}} </button>
 
 <span>{{initCounter}}</span>
 
-<button (click)="changeValue(-1)"> -1 </button>
+<button (click)="changeValue(-base)"> - {{base}} </button>
