--- a/01-firstSteps/src/app/app.component.html
+++ b/01-firstSteps/src/app/app.component.html
@@ -1,8 +1,2 @@
-<h1>{{title}}</h1>
-<h3>Base Number is: {{base}}</h3>
-
-<button (click)="changeValue(base)"> + {{base}} </button>
-
-<span>{{initCounter}}</span>
-
-<button (click)="changeValue(-base)"> - {{base}} </button>
+<!-- <app-counter></app-counter> -->
+<app-heroe></app-heroe>
