--- a/01-firstSteps/src/app/heroes/heroe/heroe.component.html
+++ b/01-firstSteps/src/app/heroes/heroe/heroe.component.html
@@ -1,1 +1,22 @@
-<h1>Heroe Component Works!</h1>
+<h1>{{name}}</h1>
+<dl>
+  <td>Name:</td>
+  <dd>{{name}}</dd>
+
+  <td>Age:</td>
+  <dd>{{age}}</dd>
+
+  <td>Function:</td>
+  <dd>{{getName()}}</dd>
+
+    <td>Capitalize:</td>
+    <dd>{{capitalizeName}}</dd>
+</dl>
+
+<button>
+    Change Hero
+</button>
+
+<button>
+  Change Age
+</button>
