one way data-binding

--- a/01-firstSteps/src/app/heroes/heroe/heroe.component.html
+++ b/01-firstSteps/src/app/heroes/heroe/heroe.component.html
@@ -9,14 +9,14 @@
   <td>Function:</td>
   <dd>{{getName()}}</dd>
 
-    <td>Capitalize:</td>
-    <dd>{{capitalizeName}}</dd>
+  <td>Capitalize:</td>
+  <dd>{{capitalizeName}}</dd>
 </dl>
 
-<button>
-    Change Hero
+<button (click)="changeName('Spiderman')">
+  Change Hero
 </button>
 
-<button>
+<button (click)="changeAge(32)">
   Change Age
 </button>
