modules and end section

--- a/01-firstSteps/src/app/heroes/list/list.component.html
+++ b/01-firstSteps/src/app/heroes/list/list.component.html
@@ -1,4 +1,4 @@
-<p>Hero List</p>
+<h1>Hero List</h1>
 
 <div *ngIf="deletedHero; else noDeleted">
   <h3>Deleted Hero: <small>{{deletedHero}}</small></h3>
