--- a/01-firstSteps/src/app/dbz/main-page/main-page.component.html
+++ b/01-firstSteps/src/app/dbz/main-page/main-page.component.html
@@ -1,2 +1,27 @@
 <h1>Dragon Ball Z</h1>
 <hr>
+
+
+<div class="row">
+  <div class="col">
+    <h3>Characters</h3>
+    <hr>
+    <ul>
+      <li>Krillin - 700</li>
+      <li>Goku - 15000</li>
+      <li>Vegeta - 8500</li>
+    </ul>
+  </div>
+
+  <div class="col">
+    <h3>Add character</h3>
+    <hr>
+
+    <form>
+      <input type="text" name="name" placeholder="Name">
+      <input type="number" name="power" placeholder="Power">
+      <button>Add</button>
+
+    </form>
+  </div>
+</div>
