--- a/01-firstSteps/src/styles.css
+++ b/01-firstSteps/src/styles.css
@@ -5,14 +5,13 @@
   font-weight: 200;
 }
 
-html, body {
-  
+html,
+body {
   background: white;
   margin: 20px;
   color: #3e4144;
   -webkit-font-smoothing: antialiased;
 }
-
 
 dd {
   font-weight: bold;
@@ -33,10 +32,27 @@ button:hover {
   background-color: #3e4144;
 }
 
-button:focus{ 
+button:focus {
   outline: none;
 }
 
 .p-1 {
   padding: 1px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.col {
+  flex: 1;
+  padding: 10px;
+}
+
+input {
+  display: block;
+  margin: 5px;
 }
