--- a/01-firstSteps/src/app/dbz/main-page/main-page.component.html
+++ b/01-firstSteps/src/app/dbz/main-page/main-page.component.html
@@ -6,9 +6,7 @@
     <h3>Characters</h3>
     <hr />
     <ul>
-      <li>Krillin - 700</li>
-      <li>Goku - 15000</li>
-      <li>Vegeta - 8500</li>
+      <li *ngFor="let character of characters">{{character.name}} - {{character.power | number}}</li>
     </ul>
   </div>
 
