--- a/01-firstSteps/src/app/dbz/main-page/main-page.component.html
+++ b/01-firstSteps/src/app/dbz/main-page/main-page.component.html
@@ -7,21 +7,7 @@
   </div>
 
   <div class="col">
-    <h3>Add character</h3>
-    <hr />
+    <app-form-add-character [new]="new" (onNewCharacter)="addNewCharacter($event)"></app-form-add-character>
 
-    <form (ngSubmit)="addCharacter()">
-      <input type="text"
-        name="name"
-        placeholder="Name"
-        [(ngModel)]="new.name" />
-
-      <input type="
-        number"
-        name="power"
-        placeholder="Power"
-        [(ngModel)]="new.power" />
-      <button>Add</button>
-    </form>
   </div>
 </div>
