--- a/01-firstSteps/src/app/dbz/main-page/main-page.component.html
+++ b/01-firstSteps/src/app/dbz/main-page/main-page.component.html
@@ -3,11 +3,11 @@
 
 <div class="row">
   <div class="col">
-    <app-characters [characters]="characters"></app-characters>
+    <app-characters></app-characters>
   </div>
 
   <div class="col">
-    <app-form-add-character [new]="new" (onNewCharacter)="addNewCharacter($event)"></app-form-add-character>
+    <app-form-add-character></app-form-add-character>
 
   </div>
 </div>
