--- a/02-gifsApp/src/app/app.component.html
+++ b/02-gifsApp/src/app/app.component.html
@@ -4,21 +4,7 @@
 
   <!-- CONTENT -->
 
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Search:</h5>
-        <input type="text"
-          class="form-control"
-          placeholder="Search GIFs">
-      </div>
-    </div>
-    <hr />
-
-    <div class="row">
-      <div class="col">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur quam inventore sequi id, suscipit ipsa numquam, modi exercitationem a nostrum aliquam ullam molestiae praesentium maiores! Corrupti eaque sint placeat sed, earum repudiandae consequuntur quae maxime a! Nulla, veniam laudantium ad aperiam consectetur, id dignissimos iure autem, deserunt accusantium incidunt facere?</div>
-    </div>
-  </div>
+    <app-gifs-page class="container"></app-gifs-page>
 
   <!-- END CONTENT -->
 
