@ViewChild and send info on input - references in html objects

--- a/02-gifsApp/src/app/gifs/search/search.component.html
+++ b/02-gifsApp/src/app/gifs/search/search.component.html
@@ -1,4 +1,6 @@
     <h5>Search:</h5>
     <input type="text"
       class="form-control"
-      placeholder="Search GIFs">
+      placeholder="Search GIFs"
+      (keyup.enter)="onSearch()"
+      #txtSearch>
