--- a/03-countriesApp/src/app/app.component.html
+++ b/03-countriesApp/src/app/app.component.html
@@ -1,1 +1,19 @@
-<h1>Hello world!</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3">
+      <h2>Search</h2>
+      <hr />
+      <ul class="list-group">
+        <li class="list-group-item active">By Country</li>
+        <li class="list-group-item">By Region</li>
+        <li class="list-group-item">By Capital</li>
+      </ul>
+    </div>
+
+    <div class="col">
+      <h2>By Capital</h2>
+      <hr />
+      <app-by-capital></app-by-capital>
+    </div>
+  </div>
+</div>
