Router Module: routes in the app

--- a/03-countriesApp/src/app/app.component.html
+++ b/03-countriesApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid my-3">
   <div class="row">
     <div class="col-3">
       <h2>Search</h2>
@@ -11,9 +11,7 @@
     </div>
 
     <div class="col">
-      <h2>By Capital</h2>
-      <hr />
-      <app-by-capital></app-by-capital>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
