--- a/03-countriesApp/src/app/app.component.html
+++ b/03-countriesApp/src/app/app.component.html
@@ -1,20 +1,7 @@
-<div class="container-fluid my-3">
+<div class="container my-3">
   <div class="row">
     <div class="col-3">
-      <h2>Search</h2>
-      <hr />
-      <ul class="list-group">
-        <li routerLink=""
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{exact: true}"
-          class="list-group-item">By Country</li>
-        <li routerLink="region"
-          routerLinkActive="active"
-          class="list-group-item">By Region</li>
-        <li routerLink="capital"
-          routerLinkActive="active"
-          class="list-group-item">By Capital</li>
-      </ul>
+      <app-sidebar></app-sidebar>
     </div>
 
     <div class="col">
