--- a/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
+++ b/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
@@ -1,1 +1,42 @@
-<p>by-country works!</p>
+<h2>By Country</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <form (ngSubmit)="searchCountry()">
+      <input [(ngModel)]="search" class="form-control" type="text" name="search" placeholder="Search country...">
+    </form>
+  </div>
+</div>
+
+<hr />
+
+<div class="alert alert-danger">
+  Nothing found for <strong>asdasdasd</strong>
+</div>
+
+<div class="row">
+  <div class="col">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Flag</th>
+          <th>Name</th>
+          <th>Population</th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Flag</td>
+          <td>Name</td>
+          <td>9,826,670</td>
+          <td>USD</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
