handling errors, show/hide error msg and table if have errors

--- a/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
+++ b/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
@@ -11,11 +11,11 @@
 
 <hr />
 
-<div class="alert alert-danger">
-  Nothing found for <strong>asdasdasd</strong>
+<div *ngIf="this.hasError" class="alert alert-danger">
+  Nothing found for <strong>{{search}}</strong>
 </div>
 
-<div class="row">
+<div *ngIf="!this.hasError" class="row">
   <div class="col">
     <table class="table table-hover">
       <thead>
