--- a/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
+++ b/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
@@ -3,9 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <form (ngSubmit)="searchCountry()">
-      <input [(ngModel)]="search" class="form-control" type="text" name="search" placeholder="Search country...">
-    </form>
+    <app-country-input></app-country-input>
   </div>
 </div>
 
@@ -17,26 +15,6 @@
 
 <div *ngIf="this.countries.length > 0" class="row">
   <div class="col">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Flag</th>
-          <th>Name</th>
-          <th>Population</th>
-          <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <tr *ngFor="let country of countries; let i = index">
-          <td>{{i + 1}}</td>
-          <td><img class="small-flag" [src]="country.flag" alt=""></td>
-          <td>{{country.name}}</td>
-          <td>{{country.population | number}}</td>
-          <td><a [routerLink]="['/country', country.alpha2Code]">See more...</a></td>
-        </tr>
-      </tbody>
-    </table>
+    <app-country-table [countries]="countries"></app-country-table>
   </div>
 </div>
