--- a/03-countriesApp/src/app/countries/components/country-input/country-input.component.html
+++ b/03-countriesApp/src/app/countries/components/country-input/country-input.component.html
@@ -1,3 +1,3 @@
 <form (ngSubmit)="searchCountry()">
-    <input [(ngModel)]="search" class="form-control" type="text" name="search" placeholder="Search country...">
+  <input [(ngModel)]="search" (input)="pressedKey()" class="form-control" type="text" name="search" placeholder="Search country...">
 </form>
