--- a/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
+++ b/03-countriesApp/src/app/countries/pages/by-country/by-country.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <app-country-input (onEnter)="searchCountry($event)"></app-country-input>
+    <app-country-input (onEnter)="searchCountry($event)" (onDebounce)="suggestions($event)"></app-country-input>
   </div>
 </div>
 
