--- a/03-countriesApp/src/app/countries/components/country-table/country-table.component.html
+++ b/03-countriesApp/src/app/countries/components/country-table/country-table.component.html
@@ -13,7 +13,7 @@
     <tr *ngFor="let country of countries; let i = index">
         <td>{{i + 1}}</td>
         <td><img class="small-flag" [src]="country.flag" alt=""></td>
-        <td>{{country.name}}</td>
+        <td>{{country.capital}}, {{country.name}}</td>
         <td>{{country.population | number}}</td>
         <td><a [routerLink]="['/country', country.alpha2Code]">See more...</a></td>
     </tr>
