--- a/03-countriesApp/src/app/countries/pages/show-country/show-country.component.html
+++ b/03-countriesApp/src/app/countries/pages/show-country/show-country.component.html
@@ -1,1 +1,25 @@
-<p>show-country works!</p>
+<div *ngIf="!country; else divCountry" class="alert alert-info">
+  Please wait...
+</div>
+
+<ng-template #divCountry>
+  <div class="row">
+    <div class="col-12">
+      <h1>Country: <small>{{country.name}}</small></h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-4">
+      <h3>Flag</h3>
+      <img class="img-thumbnail" [src]="country.flag" alt="Flag">
+    </div>
+
+    <div class="col">
+      <h3>Info</h3>
+      <ul class="list-group">
+        <li class="list-group-item"><strong>Population</strong> {{country.population | number}}</li>
+      </ul>
+    </div>
+  </div>
+</ng-template>
