--- a/03-countriesApp/src/app/countries/pages/show-country/show-country.component.html
+++ b/03-countriesApp/src/app/countries/pages/show-country/show-country.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-3">
     <div class="col-4">
       <h3>Flag</h3>
       <img class="img-thumbnail" [src]="country.flag" alt="Flag">
@@ -19,7 +19,26 @@
       <h3>Info</h3>
       <ul class="list-group">
         <li class="list-group-item"><strong>Population</strong> {{country.population | number}}</li>
+        <li class="list-group-item"><strong>Numeric Code</strong> {{country.numericCode}}</li>
+        <li class="list-group-item"><strong>Alpha3 Code</strong> {{country.alpha3Code}}</li>
+        <li class="list-group-item"><strong>Population</strong> {{country.population | number}}</li>
       </ul>
     </div>
   </div>
+  
+  <h3 class="mt-3">Translations</h3>
+  <div class="row">
+      <div class="col">
+          <span class="badge bg-primary me-1">{{country.translations.de}}</span>
+          <span class="badge bg-primary me-1">{{country.translations.es}}</span>
+          <span class="badge bg-primary me-1">{{country.translations.br}}</span>
+          <span class="badge bg-primary me-1">{{country.translations.it}}</span>
+          <span class="badge bg-primary me-1">{{country.translations.ja}}</span>
+          <span class="badge bg-primary me-1">{{country.translations.pt}}</span>
+    </div>
+  </div>
+
+  <pre class="mt-5">
+    <code>{{country | json}}</code>
+  </pre>
 </ng-template>
