Show countries by region

--- a/03-countriesApp/src/app/countries/pages/by-region/by-region.component.html
+++ b/03-countriesApp/src/app/countries/pages/by-region/by-region.component.html
@@ -16,3 +16,10 @@
     </button>
   </div>
 </div>
+
+<div *ngIf="this.countries.length > 0"
+  class="row">
+  <div class="col">
+    <app-country-table [countries]="countries"></app-country-table>
+  </div>
+</div>
