--- a/03-countriesApp/src/app/countries/components/country-table/country-table.component.html
+++ b/03-countriesApp/src/app/countries/components/country-table/country-table.component.html
@@ -10,7 +10,7 @@
     </thead>
 
     <tbody>
-    <tr *ngFor="let country of countries; let i = index">
+    <tr class="animate__animated animate__fadeIn animate__faster" *ngFor="let country of countries; let i = index">
         <td>{{i + 1}}</td>
         <td><img class="small-flag" [src]="country.flag" alt=""></td>
         <td>{{country.capital}}, {{country.name}}</td>
