--- a/03-countriesApp/src/app/countries/pages/by-capital/by-capital.component.html
+++ b/03-countriesApp/src/app/countries/pages/by-capital/by-capital.component.html
@@ -1,13 +1,15 @@
-<h2>By Capital</h2>
-<hr />
-
-<div class="row">
-  <div class="col">
-    <app-country-input (onEnter)="searchCapital($event)" placeholder="Search Capital..."></app-country-input>
+<div class="animate__animated animate__fadeIn animate__faster">
+  <h2>By Capital</h2>
+  <hr />
+  
+  <div class="row">
+    <div class="col">
+      <app-country-input (onEnter)="searchCapital($event)" placeholder="Search Capital..."></app-country-input>
+    </div>
   </div>
+  
+  <hr />
 </div>
-
-<hr />
 
 <div *ngIf="this.hasError" class="alert alert-danger">
   Nothing found for <strong>{{search}}</strong>
