Created module shared, sales and created menu component

--- a/04-pipesApp/src/app/app.component.html
+++ b/04-pipesApp/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div class="text-layout">
-  <h1>{{"Hello wORld" | titlecase}}</h1>
-  <h1>{{value | number}}</h1>
-</div>
-
-<button pButton (click)="showName()" label="Show name" icon="pi pi-check" iconPos="right" class="p-button-help">
-</button>
-
-<p-card [header]="name | titlecase">
-  Content
-</p-card>
+<app-menu></app-menu>
