--- a/04-pipesApp/src/app/sales/pages/basics/basics.component.html
+++ b/04-pipesApp/src/app/sales/pages/basics/basics.component.html
@@ -1,1 +1,18 @@
-<p>basics works!</p>
+<div class="text-layout">
+    <h1>Basic Pipes</h1>
+    <p>Included Pipes in Angular - Usually in CommonModules</p>
+</div>
+
+<div class="grid">
+    <div class="col-4">
+        <p-card header="uppercase"></p-card>
+    </div>
+
+    <div class="col-4">
+        2
+    </div>
+
+    <div class="col-4">
+        3
+    </div>
+</div>
