--- a/04-pipesApp/src/app/sales/pages/basics/basics.component.html
+++ b/04-pipesApp/src/app/sales/pages/basics/basics.component.html
@@ -5,14 +5,20 @@
 
 <div class="grid">
     <div class="col-4">
-        <p-card header="uppercase"></p-card>
+        <p-card header="upperCase" [subheader]="lowerCaseName | uppercase">
+            <p>{{lowerCaseName | uppercase}}</p>
+        </p-card>
     </div>
 
     <div class="col-4">
-        2
+        <p-card header="lowerCase" [subheader]="upperCaseName | lowercase">
+            <p>{{upperCaseName | lowercase}}</p>
+        </p-card>
     </div>
 
     <div class="col-4">
-        3
+        <p-card header="titleCase" [subheader]="fullName | titlecase">
+            <p>{{fullName | titlecase}}</p>
+        </p-card>
     </div>
 </div>
