--- a/04-pipesApp/src/app/sales/pages/basics/basics.component.html
+++ b/04-pipesApp/src/app/sales/pages/basics/basics.component.html
@@ -22,3 +22,38 @@
         </p-card>
     </div>
 </div>
+
+<div class="text-layout">
+    <h1>Date Pipes</h1>
+    <p>Pipe to show dates</p>
+</div>
+
+<div class="grid">
+    <div class="col-6">
+        <p-card>
+            <ul>
+                <li>Date</li>
+                <li>Date | date</li>
+                <li>Date | date:'short'</li>
+                <li>Date | date:'long'</li>
+
+                <li>Date | date:'MMMM'</li>
+                <li>Date | date:'dd, MMMM, yyyy'</li>
+            </ul>
+        </p-card>
+    </div>
+
+    <div class="col-6">
+        <p-card>
+            <ul>
+                <li>{{date}}</li>
+                <li>{{date | date}}</li>
+                <li>{{date | date:'short'}}</li>
+                <li>{{date | date:'long'}}</li>
+
+                <li>{{date | date:'MMMM'}}</li>
+                <li>{{date | date:'dd MMMM, yyyy'}}</li>
+            </ul>
+        </p-card>
+    </div>
+</div>
