--- a/04-pipesApp/src/app/sales/pages/basics/basics.component.html
+++ b/04-pipesApp/src/app/sales/pages/basics/basics.component.html
@@ -19,6 +19,7 @@
     <div class="col-4">
         <p-card header="titleCase" [subheader]="fullName | titlecase">
             <p>{{fullName | titlecase}}</p>
+            <p>{{fullName | titlecase}}</p>
         </p-card>
     </div>
 </div>
