--- a/04-pipesApp/src/app/sales/pages/no-commons/no-commons.component.html
+++ b/04-pipesApp/src/app/sales/pages/no-commons/no-commons.component.html
@@ -1,1 +1,18 @@
-<p>no-commons works!</p>
+<div class="text-layout">
+    <h1>No Common Pipes</h1>
+    <p>Included Pipes in Angular - Usually in CommonModules</p>
+</div>
+
+
+<div class="grid">
+    <div class="col">
+        <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+    <div class="col">
+        <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+</div>
