--- a/04-pipesApp/src/app/sales/pages/no-commons/no-commons.component.html
+++ b/04-pipesApp/src/app/sales/pages/no-commons/no-commons.component.html
@@ -7,12 +7,12 @@
 <div class="grid">
     <div class="col">
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-            Content
+            Saludos {{ name }}, es un placer {{ genre | i18nSelect: invitationMap}} a nuestro evento.
         </p-fieldset>
     </div>
     <div class="col">
         <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-            Content
+            Actualmente {{ clients.length | i18nPlural: clientsMap }}
         </p-fieldset>
     </div>
 </div>
