--- a/04-pipesApp/src/app/sales/pages/no-commons/no-commons.component.html
+++ b/04-pipesApp/src/app/sales/pages/no-commons/no-commons.component.html
@@ -7,12 +7,14 @@
 <div class="grid">
     <div class="col">
         <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-            Saludos {{ name }}, es un placer {{ genre | i18nSelect: invitationMap}} a nuestro evento.
+            <p>Saludos {{ name }}, es un placer {{ genre | i18nSelect: invitationMap}} a nuestro evento.</p>
+            <button pButton label="Change Person" (click)="changePerson()"></button>
         </p-fieldset>
     </div>
     <div class="col">
         <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-            Actualmente {{ clients.length | i18nPlural: clientsMap }}
+            <p>Actualmente {{ clients.length | i18nPlural: clientsMap }}</p>
+            <button pButton label="Delete client" (click)="deleteClient()"></button>
         </p-fieldset>
     </div>
 </div>
